[package]
name = "hide"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15"
bevy_rapier3d = { version = "0.28.0", features = ["rapier-debug-render", "simd-stable"] }
enum-iterator = "2"
nearly = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[target.'cfg(unix)'.dependencies]
bevy = { version = "0.15", features = ["wayland"] }

[features]
default = ["debug"]
debug = ["bevy/dynamic_linking"]
